@@ -1,3 +1,7 @@
+* Dialer (ECCP): Do not dial to *8888 anymore for agent login. Instead, dial
+  channel directly into the AgentLogin application. This frees the dialer from
+  having to know a special dialstring for agent login. Fixes Elastix bug #1076.
+
 1.6.2 (SVN revision 3289)
 * Dialer: fix bug in which linked call could get assigned to an inactive version
   of an agent even if an active version exists.
